fix(media slider): set li children to vertically align top

--- a/app/assets/stylesheets/elements.scss
+++ b/app/assets/stylesheets/elements.scss
@@ -78,6 +78,7 @@
                 height: 480px;
                 list-style: none;
                 display: inline-block;
+                vertical-align: top;
 
                 &:hover {
                     .play-btn {
